# weather-cast

./: CMakeLists.txt  README.md  main.cpp
include/: api_handler.h  parser.h  weather.h  weathercodes.h
src/: CMakeLists.txt  api_handler.cpp  parser.cpp  weather.cpp
